r354:    * Killed the fixlinks stuff, since there are no longer any symlinks in      the source package.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.101) unstable; urgency=low
+
+  * Killed the fixlinks stuff, since there are no longer any symlinks in
+    the source package.
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  5 Jul 2000 19:14:10 -0700
+
 debhelper (2.0.100) unstable; urgency=low
 
   * Modified all postinst script fragments to only run when called with
