r356:    * Documented the full list of extra files dh_clean deletes, since people      are for some reason adverse to using -v to find it. Closes: #66883

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.102) unstable; urgency=low
+
+  * Documented the full list of extra files dh_clean deletes, since people
+    are for some reason adverse to using -v to find it. Closes: #66883
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  7 Jul 2000 12:40:43 -0700
+
 debhelper (2.0.101) unstable; urgency=low
 
   * Killed the fixlinks stuff, since there are no longer any symlinks in
