r357:    * Added dh_installlogrotate. Yuck, 3 l's, but I want to folow my      standard..

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.103) unstable; urgency=low
+
+  * Added dh_installlogrotate. Yuck, 3 l's, but I want to folow my
+    standard..
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  9 Jul 2000 00:51:03 -0700
+
 debhelper (2.0.102) unstable; urgency=low
 
   * Documented the full list of extra files dh_clean deletes, since people
