r358:    * Put dh_installogrotate in the examples, Closes: #66986

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.104) unstable; urgency=low
+
+  * Put dh_installogrotate in the examples, Closes: #66986
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 10 Jul 2000 16:16:37 -0700
+
 debhelper (2.0.103) unstable; urgency=low
 
   * Added dh_installlogrotate. Yuck, 3 l's, but I want to folow my
