--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -28,7 +28,7 @@ See
 for a list of options common to all debhelper commands.
 .TP
 .B --sourcedir=dir
-Instead of moveing files out of debian/tmp (the default), this option makes
+Instead of moving files out of debian/tmp (the default), this option makes
 it move files out of some other directory. Since the entire contents of
 the sourcedir is moved, specifiying something like --sourcedir=/ is very
 unsafe, so to prevent mistakes, the sourcedir must be a relative filename; it
