--- a/doc/TODO
+++ b/doc/TODO
@@ -67,4 +67,6 @@ Deprecated:
   - currently, a few packages in potato use dh_du, but bugs have been filed.
 * Remove support for --number option
   - only dh_installemacsen ever used it, it is not --priority.
+* DH_COMPAT 1. Can be removed onve all packages are seen to be using 2 or
+  higher. I won't hold my breath.
 
