r360:    * Never refer to root, always uid/gid "0". Closes: #67508

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.1.1) unstable; urgency=low
+
+  * Never refer to root, always uid/gid "0". Closes: #67508
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 20 Jul 2000 16:56:24 -0700
+
 debhelper (2.1.0) unstable; urgency=low
 
   * I started work on debhelper v2 over a year ago, with a long list of
