--- a/dh_shlibdeps.1
+++ b/dh_shlibdeps.1
@@ -6,13 +6,12 @@ dh_shlibdeps \- calculate shared library dependancies
 .I "[debhelper options] [-ldirectory] [-uparams] [-Xitem] [-- params]"
 .SH "DESCRIPTION"
 dh_shlibdeps is a debhelper program that is responsible for calculating
-shared library dependancies for all executables found in the package build
-directory.
+shared library dependancies for packages.
 .P
 This program is merely a wrapper around
 .BR dpkg-shlibdeps (1)
 that calls it once for each package listed in the control file, passing it
-a list of ELF executables it has found.
+a list of ELF executables and shared libraries it has found.
 .SH OPTIONS
 .TP
 .B debhelper options
