r362:    * Minor man page updates as Overfiend struggles with debhelperizing X      4.0.

--- a/debhelper.1
+++ b/debhelper.1
@@ -72,7 +72,8 @@ option does.
 Do not modify postinst/postrm/etc scripts.
 .TP
 .B \-Xitem, \--exclude=item
-Exclude an item from processing.
+Exclude an item from processing. This option may be used multiple times,
+to exclude more than one thing.
 .TP
 .B \-A, \-all
 Makes files or other items that are specified on the command line take effect
