--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.1.2) unstable; urgency=low
+
+  * Minor man page updates as Overfiend struggles with debhelperizing X
+    4.0.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 21 Jul 2000 00:25:32 -0700
+
 debhelper (2.1.1) unstable; urgency=low
 
   * Never refer to root, always uid/gid "0". Closes: #67508
