r364:    * Whoops, I forgot to add v3 to cvs, so it was missing from a few      versions.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+debhelper (2.1.4) unstable; urgency=low
+
+  * Whoops, I forgot to add v3 to cvs, so it was missing from a few
+    versions.
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  4 Aug 2000 14:27:46 -0700
+
+debhelper (2.1.3) unstable; urgency=low
+
+  * dh_shlibdeps: if it sets LD_LIBRARY_PATH, it now prints out a line
+    showing it is doing that when in verbose mode.
+  * examples/rules.multi: don't use DH_OPTIONS hack. It's too confusing.
+    rules.multi2 still uses it, but it has comments explaining the caveats
+    of the hack.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 21 Jul 2000 13:53:02 -0700
+
 debhelper (2.1.2) unstable; urgency=low
 
   * Minor man page updates as Overfiend struggles with debhelperizing X
