r365:    * dh_installxfonts: corrected a problem during package removal that was      silently neglecting to remove the fonts.dir/alias files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.1.5) unstable; urgency=low
+
+  * dh_installxfonts: corrected a problem during package removal that was
+    silently neglecting to remove the fonts.dir/alias files.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 17 Aug 2000 00:44:25 -0700
+
 debhelper (2.1.4) unstable; urgency=low
 
   * Whoops, I forgot to add v3 to cvs, so it was missing from a few
