r366:    * dh_strip: now knows about the DEB_BUILD_OPTIONS=nostrip thing.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.1.6) unstable; urgency=low
+
+  * dh_strip: now knows about the DEB_BUILD_OPTIONS=nostrip thing.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 20 Aug 2000 16:28:31 -0700
+
 debhelper (2.1.5) unstable; urgency=low
 
   * dh_installxfonts: corrected a problem during package removal that was
